[workspace]
packages=[]
resolver="3"

[workspace.package]
description = "Assembly semantics and applying them"
license-file = "COPYING.md"

[workspace.dependencies]
wasmparser = { version = "0.239.0", default-features = false }
wasm-encoder = { version = "0.239.0", default-features = false,features = ["wasmparser"] }

wax-core = {version = "0.1.0",git = "https://github.com/portal-co/wax.git",branch = "main"}


