[package]
name = "asim-core"
version = "0.1.0"
edition = "2024"
description.workspace = true
license-file.workspace = true

[dependencies]
portal-pc-asm-common = { workspace = true, features = ["alloc"] }
portal-solutions-asm-semantics = { workspace = true, features = ["alloc"] }
wasm-encoder.workspace = true
wasmparser.workspace = true
wax-core.workspace = true
